<resources>
    <string name="app_name">Spot Inspection</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_reg">UserReg</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="etUserName">"请输入您的手机号"</string>
    <string name="etPassWord">"请输入您的密码"</string>
    <string name="etPassWord2">"请再次输入您的密码"</string>

    <string name="tvU">"手  机  号："</string>
    <string name="tvP">"密        码："</string>
    <string name="tvPP">"确认密码："</string>
    <string name="tvLogin">"注册"</string>
    <string name="tvRegister">"登入"</string>


    <string name="SSID">"SSID："</string>
    <string name="KEY">"KEY："</string>
    <string name="etAddDeviceKey">"请输入您的WIFI密码"</string>
    <string name="btnConfig">"配置"</string>

    <string name="btnAddDevice">"添加"</string>

    <string name="btnConnect">连接</string>
    <string name="btnStart">开始采样</string>
    <string name="tvSendContent">请输入发送的内容</string>
    <string name="ip">请输入服务器Ip地址</string>
    <string name="btnClear">清空聊天记录</string>
    <string name="freq">采样频率</string>
    <string name="length">采样点数</string>
    <string name="fileName">文件名</string>
    <string name="title_activity_device_list">DeviceList</string>
    <string name="title_activity_control">Control</string>
    <string name="title_activity_product_reg">ProductReg</string>
    <string name="title_activity_vibration">Vibration</string>
</resources>
