<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="willtech.spotinspection.Vibration"
    tools:showIn="@layout/activity_vibration">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<EditText-->


            <!--android:layout_width="0.0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/ip"-->
            <!--android:id="@+id/ip"-->
            <!--android:layout_weight="1"-->
            <!--android:text="115.28.74.121" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/btnConnect"-->
            <!--android:id="@+id/btnConnect" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">>-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="MAC"-->
            <!--android:id="@+id/tvMAC" />-->

        <!--<EditText-->
            <!--android:layout_width="0.0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/length"-->
            <!--android:id="@+id/mac"-->
            <!--android:layout_weight="1"-->
            <!--android:text="00:CA:01:0F:00:01" />-->


    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="频率"
            android:id="@+id/textView" />

        <EditText


            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/freq"
            android:id="@+id/freq"
            android:layout_weight="1"
            android:text="100" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="长度"
            android:id="@+id/textView2" />

        <EditText


            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/length"
            android:id="@+id/length"
            android:layout_weight="1"
            android:text="5" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="文件名"
            android:id="@+id/tvFileName" />

        <EditText


            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/fileName"
            android:id="@+id/fileName"
            android:layout_weight="1"
            android:text="Blue" />





    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvReceiveContent"
                android:textSize="16dp"
                android:scrollbars="vertical"
                android:text="0000">

            </TextView>
        </LinearLayout>

    </ScrollView>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:id="@+id/btnStart" />
</LinearLayout>
